--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="Jason Bakery - An iconic, artisanal bakery in Cape Town known for croissants and specialty coffee. Perfection in pastry.">
-    <meta name="theme-color" content="#D97706">
+    <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
